# tree-sitter-lint-lsp

./: Cargo.toml
src/: main.rs
