[package]
name = "tree-sitter-lint-lsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashmap = "5.5.0"
ropey = "1.6.0"
serde_json = "1.0.103"
text-diff = "0.4.0"
tokio = { version = "1.29.1", features = ["full"] }
tower-lsp = "0.19.0"
tree-sitter-lint = { path = "../tree-sitter-lint" }
tree-sitter-lint-local = { path = "../tree-sitter-lint/.tree-sitter-lint/tree-sitter-lint-local" }
